objects/Contact_Batch_Parameters__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Contact_Duration__c</fullName>
        <label>Batch_Contact_Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Contact_Query__c</fullName>
        <label>Batch_Contact_Query</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Contact_Size__c</fullName>
        <label>Batch_Contact_Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>